# bartools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  railway.toml  tsconfig.base.json
.github/: pull_request_template.md
assets/: verbena_inventory.xlsx  verbena_schema.md  verbena_simple_solutions.jsonl
docs/: bar_notes.md  camera_research.md  deep-research-report-bottles-api.md  deep-research-yolo26-mobile.md  prelim_data_model.ts  report-inference-flow-mermaid.txt
docs/memory-bank/: activeContext.md  progress.md  projectbrief.md  techContext.md
infra/: .gitignore  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  README.md  RESOURCES.md  RUNBOOK.md  index.ts  package.json  tsconfig.json
infra/scripts/: _env.sh  bootstrap.sh  deploy.sh  provision-neon.sh  push-schema.sh
infra/src/: apis.ts  image.ts  registry.ts  run.ts  secret.ts  service-account.ts  storage.ts  tasks.ts
prototypes/bottle-counter/: .gitignore  README.md  bench.py  botsort_bottles.yaml  coreml.py  count.py  detections.py  harvesters.py  pipeline.py  preview.py  pyproject.toml  scoring.py
prototypes/bottle-counter/tests/: test_e2e_harvesters.py
thoughts/shared/: handoff.md  inference-flow.md
thoughts/shared/decisions/: 008-ondevice-sentry-tier2.md  009-visioncamera-v4.md  010-gcs-presigned-uploads.md
thoughts/shared/plans/: plan-add-to-inventory.md  plan.md
thoughts/shared/research/: Q2_tier2_eval_strategy.md  brownfield_audit.md  domain-map.md  prd.md  presearch_criteria.md  (+2 more)
thoughts/trace/: trace.jsonl
(+2 files in other folders)
